[gd_scene load_steps=3 format=3 uid="uid://dfmdcfl5ec7bj"]

[ext_resource type="Texture2D" uid="uid://7l4wa35hp6gn" path="res://barkley2/assets/b2_original/images/merged/s_map_ladder.png" id="1_kp1v8"]
[ext_resource type="Script" path="res://barkley2/scenes/Objects/_map/Control Objects/o_map_ladder.gd" id="1_noitd"]

[node name="o_map_ladder" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_noitd")

[node name="icon" type="Sprite2D" parent="."]
texture = ExtResource("1_kp1v8")
centered = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = &"Audio"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
